--- a/overlay-aosp/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-aosp/frameworks/base/core/res/res/values/config.xml
@@ -22,4 +22,7 @@
      <!-- Do the battery/notification LEDs support pulsing?
          Used to decide if we show pulse settings -->
     <bool name="config_ledCanPulse">false</bool>
+
+    <!-- Pocket Lock -->
+    <bool name="config_pocketModeSupported">true</bool>
 </resources>
