--- a/overlay/AOSPAMunchFrameworksOverlay/res/values/config.xml
+++ b/overlay/AOSPAMunchFrameworksOverlay/res/values/config.xml
@@ -42,6 +42,5 @@
     <string name="config_oemFastChargerStatusPath" translatable="false">/sys/class/power_supply/bms/fastcharge_mode</string>
 
     <!-- Fingerprint from stock ROM -->
-    <string name="config_stockFingerprint" translatable="false">Redmi/munch/munch:13/RKQ1.211001.001/V14.0.6.0.TLMMIXM:user/release-keys</string>
-
+    <string name="config_stockFingerprint" translatable="false">Redmi/munch/munch:14/RKQ1.211001.001/V816.0.1.0.ULMMIXM:user/release-keys</string>
 </resources>
